# claimbot

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/claimbot/: __init__.py  cli.py  models.py  report.py  simulator.py
src/claimbot/policy/: __init__.py  checker.py  deductible.py  types.py
src/claimbot/processor/: __init__.py  assessor.py  estimator.py  intake.py
src/claimbot/workflow/: __init__.py  fraud.py  router.py  timeline.py
tests/: test_assessor.py  test_benchmark.py  test_core.py  test_intake.py  test_integration.py  test_models.py  test_policy.py  test_simulator.py  test_workflow.py
